--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,10 @@
+<html>
+<body>
 
 <!-- footer -->
 <footer>
    
-    <!-- footer 右側 -->
+    <!-- footer 中央 -->
     <p class="footer-center">Copyright©️ Shinohara. ALL RIGHTS RESERVED.</p>
   </footer>
   
