--- a/footer.html
+++ b/footer.html
@@ -1,11 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>American_village</title>
+    <link rel="stylesheet" href="assets/css/footer.css">
+</head>
 <body>
+
+
 
 <!-- footer -->
 <footer>
    
     <!-- footer 中央 -->
-    <p class="footer-center">Copyright©️ Shinohara. ALL RIGHTS RESERVED.</p>
+    <p class="footer_center">Copyright©️ Shinohara. ALL RIGHTS RESERVED.</p>
   </footer>
   
   </body>
