--- a/blog.html
+++ b/blog.html
@@ -7,69 +7,106 @@
     <link rel="stylesheet" href="assets/css/blog.css" class="css">
 </head>
 <body>
-    <h1>メンバー募集掲示板</h1>
+<div class="name-board">  
+    <h1>Latest Article</h1>
 </div>
 <div class="board">
     <div class="board-contents">
         <article>
-            <a href="#">
-                <img src="img/article1.jpg" alt="">
-                <h3 class="date">2018/5/20</h3>
-                <p class="text">
-                    テキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキスト
-                </p>
-            </a>
+            <div class="article">
+                <a href="#">
+                    <img src="assets/img/post_img_1.png" alt="">
+                    <div class="articleBox">
+                        <h1 class="date">2018/5/20</h1>
+                        <p class="text">
+                            テキストテキストテキストテキストテキストテキスト
+                            テキストテキストテキストテキストテキストテキスト
+                        </p>
+                        <p class="readMore">READ MORE</p>
+                        <div class="blackLine"></div>
+                    </div>
+                </a>
+            </div>
         </article>
         <article>
-            <a href="#">
-                <img src="img/article1.jpg" alt="">
-                <h3 class="date">タイトル</h3>
-                <p class="text">
-                    テキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキスト
-                </p>
-            </a>
+            <div class="article">
+                <a href="#">
+                    <img src="assets/img/post_img_1.png" alt="">
+                    <div class="articleBox">
+                        <h1 class="date">2018/5/20</h1>
+                        <p class="text">
+                            テキストテキストテキストテキストテキストテキスト
+                            テキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </div>
+                    <p class="readMore">READ MORE</p>
+                    <div class="blackLine"></div>
+                </a>
+            </div>
         </article>
         <article>
-            <a href="#">
-                <img src="img/article1.jpg" alt="">
-                <h3 class="date">タイトル</h3>
-                <p class="text">
-                    テキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキスト
-                </p>
-            </a>
+            <div class="article">
+                <a href="#">
+                    <img src="assets/img/post_img_3.png" alt="">
+                    <div class="articleBox">
+                        <h1 class="date">2018/5/20</h1>
+                        <p class="text">
+                            テキストテキストテキストテキストテキストテキスト
+                            テキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </div>
+                    <p class="readMore">READ MORE</p>
+                    <div class="blackLine"></div>
+                </a>
+            </div>
         </article>
         <article>
-            <a href="#">
-                <img src="img/article1.jpg" alt="">
-                <h3 class="date">タイトル</h3>
-                <p class="text">
-                    テキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキスト
-                </p>
-            </a>
+            <div class="article">
+                <a href="#">
+                    <img src="assets/img/post_img_4.png" alt="">
+                    <div class="articleBox">
+                        <h1 class="date">2018/5/20</h1>
+                        <p class="text">
+                            テキストテキストテキストテキストテキストテキスト
+                            テキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </div>
+                    <p class="readMore">READ MORE</p>
+                    <div class="blackLine"></div>
+                </a>
+            </div>
         </article>
         <article>
-            <a href="#">
-                <img src="img/article1.jpg" alt="">
-                <h3 class="date">タイトル</h3>
-                <p class="text">
-                    テキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキスト
-                </p>
-            </a>
+            <div class="article">
+                <a href="#">
+                    <img src="assets/img/post_img_5.png" alt="">
+                    <div class="articleBox">
+                        <h1 class="date">2018/5/20</h1>
+                        <p class="text">
+                            テキストテキストテキストテキストテキストテキスト
+                            テキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </div>
+                    <p class="readMore">READ MORE</p>
+                    <div class="blackLine"></div>
+                </a>
+            </div>
         </article>
         <article>
-            <a href="#">
-                <img src="img/article1.jpg" alt="">
-                <h3 class="date">タイトル</h3>
-                <p class="text">
-                    テキストテキストテキストテキストテキストテキスト
-                    テキストテキストテキストテキストテキストテキスト
-                </p>
-            </a>
+            <div class="article">
+                <a href="#">
+                    <img src="assets/img/post_img_6.png" alt="">
+                    <div class="articleBox">
+                        <h1 class="date">2018/5/20</h1>
+                        <p class="text">
+                            テキストテキストテキストテキストテキストテキスト
+                            テキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </div>
+                    <p class="readMore">READ MORE</p>
+                    <div class="blackLine"></div>
+                </a>
+            </div>
         </article>
     </div>
 </div>
