--- a/blog.html
+++ b/blog.html
@@ -23,24 +23,24 @@
                             テキストテキストテキストテキストテキストテキスト
                         </p>
                         <p class="readMore">READ MORE</p>
-                        <div class="blackLine"></div>
                     </div>
+                    <p class="blackLine"></p>
                 </a>
             </div>
         </article>
         <article>
             <div class="article">
                 <a href="#">
-                    <img src="assets/img/post_img_1.png" alt="">
+                    <img src="assets/img/post_img_2.png" alt="">
                     <div class="articleBox">
                         <h1 class="date">2018/5/20</h1>
                         <p class="text">
                             テキストテキストテキストテキストテキストテキスト
                             テキストテキストテキストテキストテキストテキスト
                         </p>
+                        <p class="readMore">READ MORE</p>
                     </div>
-                    <p class="readMore">READ MORE</p>
-                    <div class="blackLine"></div>
+                    <p class="blackLine"></p>
                 </a>
             </div>
         </article>
@@ -54,9 +54,9 @@
                             テキストテキストテキストテキストテキストテキスト
                             テキストテキストテキストテキストテキストテキスト
                         </p>
+                        <p class="readMore">READ MORE</p>
                     </div>
-                    <p class="readMore">READ MORE</p>
-                    <div class="blackLine"></div>
+                    <p class="blackLine"></p>
                 </a>
             </div>
         </article>
@@ -70,9 +70,9 @@
                             テキストテキストテキストテキストテキストテキスト
                             テキストテキストテキストテキストテキストテキスト
                         </p>
+                        <p class="readMore">READ MORE</p>
                     </div>
-                    <p class="readMore">READ MORE</p>
-                    <div class="blackLine"></div>
+                    <p class="blackLine"></p>
                 </a>
             </div>
         </article>
@@ -86,9 +86,9 @@
                             テキストテキストテキストテキストテキストテキスト
                             テキストテキストテキストテキストテキストテキスト
                         </p>
+                        <p class="readMore">READ MORE</p>
                     </div>
-                    <p class="readMore">READ MORE</p>
-                    <div class="blackLine"></div>
+                    <p class="blackLine"></p>
                 </a>
             </div>
         </article>
@@ -102,9 +102,9 @@
                             テキストテキストテキストテキストテキストテキスト
                             テキストテキストテキストテキストテキストテキスト
                         </p>
+                        <p class="readMore">READ MORE</p>
                     </div>
-                    <p class="readMore">READ MORE</p>
-                    <div class="blackLine"></div>
+                    <p class="blackLine"></p>
                 </a>
             </div>
         </article>
