--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
             <div class="article">
                 <a href="#">
                     <img src="assets/img/post_img_5.png" alt="">
-                    <div class="articleBox">
+                    <div class="articleBox" id="articleBox">
                         <h1 class="date">2018/5/20</h1>
                         <p class="text">
                             テキストテキストテキストテキストテキストテキスト
@@ -110,6 +110,7 @@
         </article>
     </div>
 </div>
-    
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="assets/js/index.js"></script>
 </body>
 </html>
