--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
           <picture class="main_pic">
             <source srcset="assets/img/visual_1_pc.png" media="(min-width: 768px)"/>
             <source srcset="assets/img/visual_1_sp.png" media="(min-width: 375px)"/>
+            <source srcset="assets/img/visual_1_sp.png" media="(min-width: 320px)"/>
             <img src="assets/img/visual_1_pc.png" class="main_image"/>
           </picture>
             <img src="assets/img/logo.png" class="logo">
           <picture>
             <source srcset="assets/img/visual_text_pc.png" media="(min-width: 768px)">
             <source srcset="assets/img/visual_text_sp.png" media="(min-width: 375px)"/>
+            <source srcset="assets/img/visual_text_sp.png" media="(min-width: 320px)"/>
             <img src="assets/img/visual_text_pc.png" class="text_image">
           </picture>
         </div>
