--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
     <title>American_village</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 <body>
