--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/blog.css" class="css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <title>AmericanVillage</title>
 </head>
 <body>
@@ -57,5 +59,119 @@
     <div class="sub-container">
         <p class="sub_explanation">進化し続ける「街」<br class="subtitle_fix">アメリカンビレッジマガジン</p>
     </div>
+<!-- ここからゆたかの部分！ -->
+<div class="name-board">  
+  <h1>Latest Article</h1>
+</div>
+<div class="board">
+  <div class="board-contents">
+      <article>
+          <div class="article">
+              <a href="#">
+                  <img src="assets/img/post_img_1.png" alt="">
+                  <div class="articleBox">
+                      <h1 class="date">2018/5/20</h1>
+                      <p class="text">
+                          テキストテキストテキストテキストテキストテキスト
+                          テキストテキストテキストテキストテキストテキスト
+                      </p>
+                      <p class="readMore">READ MORE</p>
+                  </div>
+                  <p class="blackLine"></p>
+              </a>
+          </div>
+      </article>
+      <article>
+          <div class="article">
+              <a href="#">
+                  <img src="assets/img/post_img_2.png" alt="">
+                  <div class="articleBox">
+                      <h1 class="date">2018/5/20</h1>
+                      <p class="text">
+                          テキストテキストテキストテキストテキストテキスト
+                          テキストテキストテキストテキストテキストテキスト
+                      </p>
+                      <p class="readMore">READ MORE</p>
+                  </div>
+                  <p class="blackLine"></p>
+              </a>
+          </div>
+      </article>
+      <article>
+          <div class="article">
+              <a href="#">
+                  <img src="assets/img/post_img_3.png" alt="">
+                  <div class="articleBox">
+                      <h1 class="date">2018/5/20</h1>
+                      <p class="text">
+                          テキストテキストテキストテキストテキストテキスト
+                          テキストテキストテキストテキストテキストテキスト
+                      </p>
+                      <p class="readMore">READ MORE</p>
+                  </div>
+                  <p class="blackLine"></p>
+              </a>
+          </div>
+      </article>
+      <article>
+          <div class="article">
+              <a href="#">
+                  <img src="assets/img/post_img_4.png" alt="">
+                  <div class="articleBox">
+                      <h1 class="date">2018/5/20</h1>
+                      <p class="text">
+                          テキストテキストテキストテキストテキストテキスト
+                          テキストテキストテキストテキストテキストテキスト
+                      </p>
+                      <p class="readMore">READ MORE</p>
+                  </div>
+                  <p class="blackLine"></p>
+              </a>
+          </div>
+      </article>
+      <article>
+          <div class="article">
+              <a href="#">
+                  <img src="assets/img/post_img_5.png" alt="">
+                  <div class="articleBox" id="articleBox">
+                      <h1 class="date">2018/5/20</h1>
+                      <p class="text">
+                          テキストテキストテキストテキストテキストテキスト
+                          テキストテキストテキストテキストテキストテキスト
+                      </p>
+                      <p class="readMore">READ MORE</p>
+                  </div>
+                  <p class="blackLine"></p>
+              </a>
+          </div>
+      </article>
+      <article>
+          <div class="article">
+              <a href="#">
+                  <img src="assets/img/post_img_6.png" alt="">
+                  <div class="articleBox">
+                      <h1 class="date">2018/5/20</h1>
+                      <p class="text">
+                          テキストテキストテキストテキストテキストテキスト
+                          テキストテキストテキストテキストテキストテキスト
+                      </p>
+                      <p class="readMore">READ MORE</p>
+                  </div>
+                  <p class="blackLine"></p>
+              </a>
+          </div>
+      </article>
+  </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="assets/js/index.js"></script>
+<!-- ここまで！ -->
+<!-- ここからあいちゃんの部分 -->
+<!-- footer -->
+<footer class="justify-content-center">
+   
+  <!-- footer 中央 -->
+  <p class="footer_center">Copyright©️ Shinohara. ALL RIGHTS RESERVED.</p>
+</footer>
 </body>
 </html>
